--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                         <label class="input-group__label" for="arrival-input">Прибытие</label>
                         <p class="input-group__split">
                           <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                          <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                         </p>
                       </div>
                       <div class="input-group  input-group--column">
                         <label class="input-group__label" for="departure-input">Выезд</label>
                         <p class="input-group__split">
                           <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                          <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                         </p>
                       </div>
                       <div class="date-picker-container" id="date-picker-container"></div>
@@ -207,7 +207,7 @@
                 <div class="input-group">
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Email"/>
-                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="https://dywork.github.io/toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -237,5 +237,5 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="https://dywork.github.io/toxin/main.bundle.js"></script></body>
+  <script type="text/javascript" src="toxin/main.bundle.js"></script></body>
 </html>
