--- a/auth.html
+++ b/auth.html
@@ -190,7 +190,7 @@
                 <div class="input-group">
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Email"/>
-                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="https://dywork.github.io/toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -220,5 +220,5 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="https://dywork.github.io/toxin/auth.bundle.js"></script></body>
+  <script type="text/javascript" src="toxin/auth.bundle.js"></script></body>
 </html>
