--- a/form-elements.html
+++ b/form-elements.html
@@ -7,7 +7,7 @@
     <title>Toxin - элементы форм</title>
   </head>
   <body class="form-elements">
-    <div class="logo logo--big"><img width="48" height="48" src="https://dywork.github.io/toxin/2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="toxin/2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
     <div class="container">
       <div class="ui-kit">
         <div class="ui-kit__wrap">
@@ -38,14 +38,14 @@
                   <label class="input-group__label  input-group__label--big" for="arrival-input">Date Dropdown</label>
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
-                    <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                   </p>
                 </div>
                 <div class="input-group  input-group--column">
                   <label class="input-group__label  input-group__label--big" for="departure-input">Date Dropdown</label>
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-input" placeholder="19.08.2019"/>
-                    <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -60,7 +60,7 @@
                   <label class="input-group__label  input-group__label--big" for="undefined">Subscription text field</label>
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Email"/>
-                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="https://dywork.github.io/toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="toxin/8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -324,14 +324,14 @@
             <div class="ui-kit__column">
               <ul class="features">
                 <li class="features__item"> 
-                  <div class="features__pict"><img src="https://dywork.github.io/toxin/d260330f8d992c44cad13d8df66f7701.png" alt="Комфорт"/></div>
+                  <div class="features__pict"><img src="toxin/d260330f8d992c44cad13d8df66f7701.png" alt="Комфорт"/></div>
                   <section class="features__content">
                     <h2 class="features__title">Комфорт</h2>
                     <p class="features__descr">Шумопоглощающие стены</p>
                   </section>
                 </li>
                 <li class="features__item"> 
-                  <div class="features__pict"><img src="https://dywork.github.io/toxin/738e595396bb8958b49721391d38d5c0.png" alt="Удобство"/></div>
+                  <div class="features__pict"><img src="toxin/738e595396bb8958b49721391d38d5c0.png" alt="Удобство"/></div>
                   <section class="features__content">
                     <h2 class="features__title">Удобство</h2>
                     <p class="features__descr">Окно в каждой из спален</p>
@@ -342,7 +342,7 @@
             <div class="ui-kit__column  ui-kit__column--mls">
               <div class="comment">
                 <div class="comment__wrap">
-                  <div class="comment__pict"><img src="https://dywork.github.io/toxin/b15aa83c7d8a1aae111e141f3e85e339.png" alt="Мурад Сарафанов"/></div>
+                  <div class="comment__pict"><img src="toxin/b15aa83c7d8a1aae111e141f3e85e339.png" alt="Мурад Сарафанов"/></div>
                   <div class="likebtn">
                     <p class="likebtn__item">
                       <button type="button">12</button>
@@ -360,5 +360,5 @@
         </div>
       </div>
     </div>
-  <script type="text/javascript" src="https://dywork.github.io/toxin/form-elements.bundle.js"></script></body>
+  <script type="text/javascript" src="toxin/form-elements.bundle.js"></script></body>
 </html>
