--- a/cards.html
+++ b/cards.html
@@ -7,7 +7,7 @@
     <title>Toxin - карточки</title>
   </head>
   <body class="cards-page">
-    <div class="logo logo--big"><img width="48" height="48" src="https://dywork.github.io/toxin/2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
     <div class="container">
       <div class="cards-page__wrap">
         <div class="cards-page__row">
@@ -22,14 +22,14 @@
                         <label class="input-group__label" for="arrival-input">Прибытие</label>
                         <p class="input-group__split">
                           <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                          <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-split-btn" type="button"><img src="2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                         </p>
                       </div>
                       <div class="input-group  input-group--column">
                         <label class="input-group__label" for="departure-input">Выезд</label>
                         <p class="input-group__split">
                           <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-input" placeholder="ДД.ММ.ГГГГ"/>
-                          <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                          <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-split-btn" type="button"><img src="2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                         </p>
                       </div>
                       <div class="date-picker-container" id="date-picker-container"></div>
@@ -110,14 +110,14 @@
                     <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
                     <p class="input-group__split">
                       <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
-                      <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                      <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                     </p>
                   </div>
                   <div class="input-group  input-group--column">
                     <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
                     <p class="input-group__split">
                       <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
-                      <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="https://dywork.github.io/toxin/2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                      <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
                     </p>
                   </div>
                 </div>
@@ -251,7 +251,7 @@
             <section class="hotel-card">
               <div class="hotel-card__wrap">
                 <div class="hotel-card__slider">
-                  <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/d005b0d4bcf8f79fb9d940a65a017ede.png" alt="Красивый отель"/>
+                  <div class="hotel-card__slider-pict"><img src="d005b0d4bcf8f79fb9d940a65a017ede.png" alt="Красивый отель"/>
                   </div>
                   <div class="hotel-card__slider-pict-buttons">
                     <button class="slider-btn-active" type="button"></button>
@@ -294,7 +294,7 @@
             <section class="hotel-card">
               <div class="hotel-card__wrap">
                 <div class="hotel-card__slider">
-                  <div class="hotel-card__slider-pict"><img src="https://dywork.github.io/toxin/9aab5f0deef24e327054dd632930190f.png" alt="Красивый отель"/>
+                  <div class="hotel-card__slider-pict"><img src="9aab5f0deef24e327054dd632930190f.png" alt="Красивый отель"/>
                   </div>
                   <div class="hotel-card__slider-pict-buttons">
                     <button class="slider-btn-active" type="button"></button>
@@ -338,5 +338,5 @@
         </div>
       </div>
     </div>
-  <script type="text/javascript" src="https://dywork.github.io/toxin/cards.bundle.js"></script></body>
+  <script type="text/javascript" src="cards.bundle.js"></script></body>
 </html>
