--- a/colors-and-type.html
+++ b/colors-and-type.html
@@ -7,7 +7,7 @@
     <title>Toxin - типографика!</title>
   </head>
   <body class="colors-and-type">
-    <div class="logo logo--big"><img width="48" height="48" src="https://dywork.github.io/toxin/2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="2645e4d9a01c411e1d094ebdb0889189.png" alt="toxin"/></div>
     <div class="container">
       <div class="colors-and-type__wrap">
         <ul class="colors-and-type__pallete">
@@ -125,5 +125,5 @@
         </ul>
       </div>
     </div>
-  <script type="text/javascript" src="https://dywork.github.io/toxin/colors-and-type.bundle.js"></script></body>
+  <script type="text/javascript" src="colors-and-type.bundle.js"></script></body>
 </html>
