--- a/registration.html
+++ b/registration.html
@@ -221,7 +221,7 @@
                 <div class="input-group">
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Email"/>
-                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -251,5 +251,5 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="registration.bundle.js"></script></body>
+  <script type="text/javascript" src="scripts/registration.bundle.js"></script></body>
 </html>
