--- a/room-details.html
+++ b/room-details.html
@@ -78,8 +78,8 @@
     </header>
     <main>
       <div class="room-details__picture"> 
-        <div class="room-details__picture-big"><img src="d4e07fd2f8d5a939fe994dc0e7581aeb.jpg" alt="Детали комнаты"></div>
-        <div class="room-details__picture-miniature"><img src="84fdd2c96515b904f3187ac7c0ea204c.jpg" alt="Детали комнаты"><img src="45eb3f2d45cc3f87104023607ebe6e2e.jpg" alt="Детали комнаты"></div>
+        <div class="room-details__picture-big"><img src="img/room-details-1-32273a8.jpg" alt="Детали комнаты"></div>
+        <div class="room-details__picture-miniature"><img src="img/room-details-2-66b4d4b.jpg" alt="Детали комнаты"><img src="img/room-details-3-a6b3c09.jpg" alt="Детали комнаты"></div>
       </div>
       <div class="container">
         <div class="room-details__wrap">
@@ -90,21 +90,21 @@
                   <h2 class="room-details__title">Сведения о номере</h2>
                   <ul class="features">
                     <li class="features__item"> 
-                      <div class="features__pict"><img src="d260330f8d992c44cad13d8df66f7701.png" alt="Комфорт"/></div>
+                      <div class="features__pict"><img src="img/emoticon-379d29a.png" alt="Комфорт"/></div>
                       <section class="features__content">
                         <h2 class="features__title">Комфорт</h2>
                         <p class="features__descr">Шумопоглощающие стены</p>
                       </section>
                     </li>
                     <li class="features__item"> 
-                      <div class="features__pict"><img src="738e595396bb8958b49721391d38d5c0.png" alt="Удобство"/></div>
+                      <div class="features__pict"><img src="img/city-2323a61.png" alt="Удобство"/></div>
                       <section class="features__content">
                         <h2 class="features__title">Удобство</h2>
                         <p class="features__descr">Окно в каждой из спален</p>
                       </section>
                     </li>
                     <li class="features__item"> 
-                      <div class="features__pict"><img src="2a4411e85015cb3ef12f848357d16fb2.png" alt="Уют"/></div>
+                      <div class="features__pict"><img src="img/whatshot-4d5dec7.png" alt="Уют"/></div>
                       <section class="features__content">
                         <h2 class="features__title">Уют</h2>
                         <p class="features__descr">Номер оснащён камином</p>
@@ -132,7 +132,7 @@
                 <h2 class="room-details__title  room-details__title--low-mb">Отзывы посетителей номера <span class="room-details__title-alt">2 отзыва</span></h2>
                 <div class="comment">
                   <div class="comment__wrap">
-                    <div class="comment__pict"><img src="b15aa83c7d8a1aae111e141f3e85e339.png" alt="Мурад Сарафанов"/></div>
+                    <div class="comment__pict"><img src="img/murad-1eb8d7f.png" alt="Мурад Сарафанов"/></div>
                     <div class="likebtn">
                       <p class="likebtn__item  likebtn__item--active">
                         <button type="button">12</button>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="comment">
                   <div class="comment__wrap">
-                    <div class="comment__pict"><img src="d6768fda3e307360b89cb06d00b680c5.png" alt="Патрисия Стёклышкова"/></div>
+                    <div class="comment__pict"><img src="img/patric-0b10e46.png" alt="Патрисия Стёклышкова"/></div>
                     <div class="likebtn">
                       <p class="likebtn__item">
                         <button type="button">2</button>
@@ -188,14 +188,14 @@
                   <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
-                    <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                   </p>
                 </div>
                 <div class="input-group  input-group--column">
                   <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
-                    <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="2aca2b81629bfaae56f0a3532836a10e.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -316,7 +316,7 @@
                 <div class="input-group">
                   <p class="input-group__split">
                     <input class="input-group__input  input-group__input--button-split" id="undefined" type="email" placeholder="Email"/>
-                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="8db3d80a75739a8d251fa3df656f2a76.svg" alt=""/></button>
+                    <button class="input-group__button-split  input-group__button-split--right-animation" id="undefined" type="button"><img src="img/arrow-forward-55d57b1.svg" alt=""/></button>
                   </p>
                 </div>
               </div>
@@ -346,5 +346,5 @@
         </div>
       </div>
     </footer>
-  <script type="text/javascript" src="room-details.bundle.js"></script></body>
+  <script type="text/javascript" src="scripts/room-details.bundle.js"></script></body>
 </html>
