--- a/cards.html
+++ b/cards.html
@@ -120,11 +120,13 @@
                       <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                     </p>
                   </div>
+                  <div class="date-picker-container" id="date-picker-container"></div>
                 </div>
                 <div class="input-group  input-group--column">
                   <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
                   <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-total-guests-input">3 гостя</div>
                 </div>
+                <div class="drop-down-container" id="drop-down-total-container"></div>
                 <div class="total-card__calc">
                   <div class="total-card__calc-item">
                     <p class="total-card__calc-text">9 990₽ х 4 суток</p>
