--- a/room-details.html
+++ b/room-details.html
@@ -187,22 +187,24 @@
                 <div class="input-group  input-group--column">
                   <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
                   <p class="input-group__split">
-                    <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
+                    <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="ДД.ММ.ГГГГ"/>
                     <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                   </p>
                 </div>
                 <div class="input-group  input-group--column">
                   <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
                   <p class="input-group__split">
-                    <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
+                    <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="ДД.ММ.ГГГГ"/>
                     <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                   </p>
                 </div>
+                <div class="date-picker-container" id="date-picker-container"></div>
               </div>
               <div class="input-group  input-group--column">
                 <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
                 <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-total-guests-input">3 гостя</div>
               </div>
+              <div class="drop-down-container" id="drop-down-total-container"></div>
               <div class="total-card__calc">
                 <div class="total-card__calc-item">
                   <p class="total-card__calc-text">9 990₽ х 4 суток</p>
