--- a/form-elements.html
+++ b/form-elements.html
@@ -160,20 +160,14 @@
             <div class="ui-kit__column  ui-kit__column--xls">
               <div class="ui-kit__column-row  ui-kit__column-row--large">
                 <div class="range">
-                  <div class="range__head">
-                    <p class="range__title">Range Slider</p>
-                    <div class="range__head-range">
-                      <p class="range_value  range_value--min">5 000₽</p><span>-</span>
-                      <p class="range_value  range_value--max">10 000₽</p>
+                  <div class="range__view">
+                    <h2 class="range__title">Range Slider</h2>
+                    <div class="range__price">
+                      <p class="range__cost" id="lower-value"></p>
+                      <p class="range__cost" id="upper-value"></p>
                     </div>
                   </div>
-                  <div class="range__wrap">
-                    <div class="range__bar">
-                      <div class="range__scale" style="width: 27%;"></div>
-                    </div>
-                    <div class="range__toggle  range__toggle--min"></div>
-                    <div class="range__toggle  range__toggle--max"></div>
-                  </div>
+                  <div class="range__slider" id="range-slider"></div>
                 </div>
               </div>
               <div class="ui-kit__column-row  ui-kit__column-row--small">
