--- a/rooms.html
+++ b/rooms.html
@@ -92,23 +92,18 @@
                   <p class="input-group__label  input-group__label--big" id="for-number-guest">Гости</p>
                   <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guest">3 гостя, 1 младенец</div>
                 </div>
+                <div class="drop-down-container" id="drop-down-guest-container"></div>
               </div>
               <div class="filter__item">
                 <div class="range">
-                  <div class="range__head">
-                    <p class="range__title">Диапазон цены</p>
-                    <div class="range__head-range">
-                      <p class="range_value  range_value--min">5 000₽</p><span>-</span>
-                      <p class="range_value  range_value--max">10 000₽</p>
+                  <div class="range__view">
+                    <h2 class="range__title">Диапазон цены</h2>
+                    <div class="range__price">
+                      <p class="range__cost" id="lower-value"></p>
+                      <p class="range__cost" id="upper-value"></p>
                     </div>
                   </div>
-                  <div class="range__wrap">
-                    <div class="range__bar">
-                      <div class="range__scale" style="width: 27%;"></div>
-                    </div>
-                    <div class="range__toggle  range__toggle--min"></div>
-                    <div class="range__toggle  range__toggle--max"></div>
-                  </div>
+                  <div class="range__slider" id="range-slider"></div>
                 </div>
                 <p class="filter__explan">Стоимость за сутки пребывания в номере</p>
               </div>
