--- a/cards.html
+++ b/cards.html
@@ -251,19 +251,17 @@
           </div>
           <div class="cards-page__item">
             <section class="hotel-card">
-              <div class="hotel-card__wrap">
-                <div class="hotel-card__slider">
-                  <div class="hotel-card__slider-pict"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/>
+              <div class="hotel-card__wrap  glide">
+                <div class="hotel-card__slider  glide__track" data-glide-el="track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
+                  </ul>
+                  <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
+                    <button class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir="&gt;" type="button">Вперед</button>
                   </div>
-                  <div class="hotel-card__slider-pict-buttons">
-                    <button class="slider-btn-active" type="button"></button>
-                    <button type="button"></button>
-                    <button type="button"></button>
-                    <button type="button"></button>
-                  </div>
-                  <div class="hotel-card__slider-control">
-                    <button class="hotel-card__slider-btn" type="button">Назад</button>
-                    <button class="hotel-card__slider-btn  hotel-card__slider-btn--next" type="button">Вперед</button>
+                  <div class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]">
+                    <button class="glide__bullet" data-glide-dir="=0" type="button"></button>
                   </div>
                 </div>
                 <div class="hotel-card__info">
@@ -294,19 +292,17 @@
               </div>
             </section>
             <section class="hotel-card">
-              <div class="hotel-card__wrap">
-                <div class="hotel-card__slider">
-                  <div class="hotel-card__slider-pict"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/>
+              <div class="hotel-card__wrap  glide">
+                <div class="hotel-card__slider  glide__track" data-glide-el="track">
+                  <ul class="glide__slides">
+                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
+                  </ul>
+                  <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
+                    <button class="glide__arrow  glide__arrow--right  hotel-card__slider-btn  hotel-card__slider-btn--next" data-glide-dir="&gt;" type="button">Вперед</button>
                   </div>
-                  <div class="hotel-card__slider-pict-buttons">
-                    <button class="slider-btn-active" type="button"></button>
-                    <button type="button"></button>
-                    <button type="button"></button>
-                    <button type="button"></button>
-                  </div>
-                  <div class="hotel-card__slider-control  hotel-card__slider-control--hide">
-                    <button class="hotel-card__slider-btn" type="button">Назад</button>
-                    <button class="hotel-card__slider-btn  hotel-card__slider-btn--next" type="button">Вперед</button>
+                  <div class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]">
+                    <button class="glide__bullet" data-glide-dir="=0" type="button"></button>
                   </div>
                 </div>
                 <div class="hotel-card__info">
