--- a/cards.html
+++ b/cards.html
@@ -255,6 +255,9 @@
                 <div class="hotel-card__slider  glide__track" data-glide-el="track">
                   <ul class="glide__slides">
                     <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/one-hotel-01d82db.png" alt="Красивый отель"/></li>
                   </ul>
                   <div class="glide__arrows" data-glide-el="controls">
                     <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
@@ -262,6 +265,9 @@
                   </div>
                   <div class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]">
                     <button class="glide__bullet" data-glide-dir="=0" type="button"></button>
+                    <button class="glide__bullet" data-glide-dir="=1" type="button"></button>
+                    <button class="glide__bullet" data-glide-dir="=2" type="button"></button>
+                    <button class="glide__bullet" data-glide-dir="=3" type="button"></button>
                   </div>
                 </div>
                 <div class="hotel-card__info">
@@ -296,6 +302,9 @@
                 <div class="hotel-card__slider  glide__track" data-glide-el="track">
                   <ul class="glide__slides">
                     <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
+                    <li class="glide__slide"><img src="img/double-hotel-d07f801.png" alt="Красивый отель"/></li>
                   </ul>
                   <div class="glide__arrows" data-glide-el="controls">
                     <button class="glide__arrow  glide__arrow--left  hotel-card__slider-btn" data-glide-dir="&lt;" type="button">Назад</button>
@@ -303,6 +312,9 @@
                   </div>
                   <div class="hotel-card__bullets  glide__bullets" data-glide-el="controls[nav]">
                     <button class="glide__bullet" data-glide-dir="=0" type="button"></button>
+                    <button class="glide__bullet" data-glide-dir="=1" type="button"></button>
+                    <button class="glide__bullet" data-glide-dir="=2" type="button"></button>
+                    <button class="glide__bullet" data-glide-dir="=3" type="button"></button>
                   </div>
                 </div>
                 <div class="hotel-card__info">
