--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="index-block__wrap">
             <section class="date-wishes">
               <div class="date-wishes__wrap">
-                <form action="">
+                <form action="/rooms.html">
                   <fieldset>
                     <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                     <div class="date-wishes__group">
@@ -106,8 +106,9 @@
                       <p class="input-group__label" id="for-number-guests-input">Гости</p>
                       <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">Сколько гостей</div>
                     </div>
-                    <div class="drop-down-container" id="drop-down-container"></div><a class="button  button--icon" href="/rooms.html">Подобрать номер</a>
+                    <div class="drop-down-container" id="drop-down-container"></div>
                   </fieldset>
+                  <button class="button  button--icon" type="submit">Подобрать номер</button>
                 </form>
               </div>
             </section>
