--- a/rooms.html
+++ b/rooms.html
@@ -83,9 +83,10 @@
             <div class="filter__wrap">
               <div class="filter__item  filter__item--mbs">
                 <div class="input-group  input-group--column">
-                  <p class="input-group__label  input-group__label--big" id="for-number-guests-input">Даты пребывания в отеле</p>
-                  <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">19 авг - 23 авг</div>
+                  <p class="input-group__label  input-group__label--big" id="for-date-picker-input">Даты пребывания в отеле</p>
+                  <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="date-picker-input">Выберите дату</div>
                 </div>
+                <div class="date-picker-container" id="date-picker-container"></div>
               </div>
               <div class="filter__item">
                 <div class="input-group  input-group--column">
