--- a/cards.html
+++ b/cards.html
@@ -14,7 +14,7 @@
           <div class="cards-page__item">
             <section class="date-wishes">
               <div class="date-wishes__wrap">
-                <form action="">
+                <form action="/rooms.html">
                   <fieldset>
                     <legend class="date-wishes__title">Найдём номера под ваши пожелания</legend>
                     <div class="date-wishes__group">
@@ -38,8 +38,9 @@
                       <p class="input-group__label" id="for-number-guests-input">Гости</p>
                       <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-guests-input">Сколько гостей</div>
                     </div>
-                    <div class="drop-down-container" id="drop-down-container"></div><a class="button  button--icon" href="/rooms.html">Подобрать номер</a>
+                    <div class="drop-down-container" id="drop-down-container"></div>
                   </fieldset>
+                  <button class="button  button--icon" type="submit">Подобрать номер</button>
                 </form>
               </div>
             </section>
@@ -101,51 +102,53 @@
           <div class="cards-page__item">
             <section class="total-card">
               <div class="total-card__wrap">
-                <div class="total-card__head">
-                  <h2 class="total-card__title">№ <span>888</span> <b>люкс</b></h2>
-                  <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
-                </div>
-                <div class="total-card__date-inputs">
-                  <div class="input-group  input-group--column">
-                    <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
-                    <p class="input-group__split">
-                      <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
-                      <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
-                    </p>
+                <form>
+                  <div class="total-card__head">
+                    <h2 class="total-card__title">№ <span>888</span> <b>люкс</b></h2>
+                    <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
+                  </div>
+                  <div class="total-card__date-inputs">
+                    <div class="input-group  input-group--column">
+                      <label class="input-group__label  input-group__label--big" for="arrival-total-input">Прибытие</label>
+                      <p class="input-group__split">
+                        <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="arrival-total-input" placeholder="19.08.2019"/>
+                        <button class="input-group__button-split  input-group__button-split--down-animation" id="arrival-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                      </p>
+                    </div>
+                    <div class="input-group  input-group--column">
+                      <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
+                      <p class="input-group__split">
+                        <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
+                        <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
+                      </p>
+                    </div>
+                    <div class="date-picker-container" id="date-picker-container"></div>
                   </div>
                   <div class="input-group  input-group--column">
-                    <label class="input-group__label  input-group__label--big" for="departure-total-input">Выезд</label>
-                    <p class="input-group__split">
-                      <input class="input-group__input  input-group__input--button-split  input-group__input--dark-placeholder" id="departure-total-input" placeholder="23.08.2019"/>
-                      <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
-                    </p>
+                    <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
+                    <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-total-guests-input">3 гостя</div>
                   </div>
-                  <div class="date-picker-container" id="date-picker-container"></div>
-                </div>
-                <div class="input-group  input-group--column">
-                  <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
-                  <div class="input-group__input  input-group__input--fake  input-group__input--icon  input-group__button-split--down-animation" id="number-total-guests-input">3 гостя</div>
-                </div>
-                <div class="drop-down-container" id="drop-down-total-container"></div>
-                <div class="total-card__calc">
-                  <div class="total-card__calc-item">
-                    <p class="total-card__calc-text">9 990₽ х 4 суток</p>
-                    <p class="total-card__calc-cost">39 960₽</p>
+                  <div class="drop-down-container" id="drop-down-total-container"></div>
+                  <div class="total-card__calc">
+                    <div class="total-card__calc-item">
+                      <p class="total-card__calc-text">9 990₽ х 4 суток</p>
+                      <p class="total-card__calc-cost">39 960₽</p>
+                    </div>
+                    <div class="total-card__calc-item  total-card__calc-item--mbx">
+                      <p class="total-card__calc-text  total-card__calc-text--extend">Сбор за услуги: скидка 2 179₽</p>
+                      <p class="total-card__calc-cost">0₽</p>
+                    </div>
+                    <div class="total-card__calc-item">
+                      <p class="total-card__calc-text  total-card__calc-text--lhs  total-card__calc-text--extend">Сбор за дополнительные услуги</p>
+                      <p class="total-card__calc-cost">300₽</p>
+                    </div>
                   </div>
-                  <div class="total-card__calc-item  total-card__calc-item--mbx">
-                    <p class="total-card__calc-text  total-card__calc-text--extend">Сбор за услуги: скидка 2 179₽</p>
-                    <p class="total-card__calc-cost">0₽</p>
+                  <div class="total-card__total">
+                    <p class="total-card__total-text">Итого</p>
+                    <p class="total-card__total-price">38 081₽</p>
                   </div>
-                  <div class="total-card__calc-item">
-                    <p class="total-card__calc-text  total-card__calc-text--lhs  total-card__calc-text--extend">Сбор за дополнительные услуги</p>
-                    <p class="total-card__calc-cost">300₽</p>
-                  </div>
-                </div>
-                <div class="total-card__total">
-                  <p class="total-card__total-text">Итого</p>
-                  <p class="total-card__total-price">38 081₽</p>
-                </div>
-                <button class="button  button--icon" type="button">Забронировать</button>
+                  <button class="button  button--icon" type="submit">Забронировать</button>
+                </form>
               </div>
             </section>
           </div>
