--- a/cards.html
+++ b/cards.html
@@ -122,7 +122,7 @@
                         <button class="input-group__button-split  input-group__button-split--down-animation" id="departure-total-split-btn" type="button"><img src="img/expand-more-d04c9af.svg" alt=""/></button>
                       </p>
                     </div>
-                    <div class="date-picker-container" id="date-picker-container"></div>
+                    <div class="date-picker-container" id="date-picker-total-container"></div>
                   </div>
                   <div class="input-group  input-group--column">
                     <p class="input-group__label  input-group__label--big" id="for-number-total-guests-input">Гости</p>
