--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="page not found">
+    <meta name="keywords" content="Toxin keywords">
     <title>Toxin - страница не найдена!</title>
   </head>
   <body class="not-found-page">
@@ -81,7 +82,7 @@
         <section class="not-found">
           <div class="not-found__wrap">
             <h1 class="not-found__title">Ой!</h1>
-            <p class="not-found__descr">Похоже, мы не можем найти <br/> нужную вам страницу.</p>
+            <p class="not-found__descr">Похоже, мы не можем найти нужную вам страницу.</p>
             <p class="not-found__status">Код ошибки: 404</p>
             <ul class="not-found__help-links">
               <li class="not-found__help-item">Вот несолько полезных ссылок:</li>
