--- a/cards.html
+++ b/cards.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta name="description" content="Toxin description"/>
+    <meta name="keywords" content="Toxin keywords"/>
     <title>Toxin - карточки</title>
   </head>
   <body class="cards-page">
@@ -130,21 +132,20 @@
                   </div>
                   <div class="drop-down-container" id="drop-down-total-container"></div>
                   <div class="total-card__calc">
-                    <div class="total-card__calc-item">
+                    <div class="total-card__calc-row">
                       <p class="total-card__calc-text">9 990₽ х 4 суток</p>
-                      <p class="total-card__calc-cost">39 960₽</p>
+                      <p class="total-card__calc-text  total-card__calc-text--info">Сбор за услуги: скидка 2 179₽</p>
+                      <p class="total-card__calc-text  total-card__calc-text--info">Сбор за дополнительные услуги</p>
                     </div>
-                    <div class="total-card__calc-item  total-card__calc-item--mbx">
-                      <p class="total-card__calc-text  total-card__calc-text--extend">Сбор за услуги: скидка 2 179₽</p>
-                      <p class="total-card__calc-cost">0₽</p>
-                    </div>
-                    <div class="total-card__calc-item">
-                      <p class="total-card__calc-text  total-card__calc-text--lhs  total-card__calc-text--extend">Сбор за дополнительные услуги</p>
-                      <p class="total-card__calc-cost">300₽</p>
+                    <div class="total-card__calc-row  total-card__calc-row--low  total-card__calc-row--tar">
+                      <p class="total-card__calc-text">39 960₽</p>
+                      <p class="total-card__calc-text">0₽</p>
+                      <p class="total-card__calc-text">300₽</p>
                     </div>
                   </div>
                   <div class="total-card__total">
                     <p class="total-card__total-text">Итого</p>
+                    <div class="total-card__total-separator"></div>
                     <p class="total-card__total-price">38 081₽</p>
                   </div>
                   <button class="button  button--icon" type="submit">Забронировать</button>
