--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Toxin description">
+    <meta name="keywords" content="Toxin keywords">
     <title>Toxin - главная!</title>
   </head>
   <body class="index-page">
