--- a/cards.html
+++ b/cards.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="description" content="Toxin description"/>
     <meta name="keywords" content="Toxin keywords"/>
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
+    <link rel="manifest" href="/site.webmanifest"/>
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
     <title>Toxin - карточки</title>
   </head>
   <body class="cards-page">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo--big-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
     <div class="container">
       <div class="cards-page__wrap">
         <div class="cards-page__row">
@@ -50,7 +57,7 @@
           <div class="cards-page__item">
             <div class="register-card">
               <div class="register-card__wrap">
-                <form method="get">
+                <form action="/404.html">
                   <h2 class="register-card__title">Регистрация аккаунта</h2>
                   <fieldset>
                     <div class="input-group">
@@ -104,7 +111,7 @@
           <div class="cards-page__item">
             <section class="total-card">
               <div class="total-card__wrap">
-                <form>
+                <form action="/404.html">
                   <div class="total-card__head">
                     <h2 class="total-card__title">№ <span>888</span> <b>люкс</b></h2>
                     <p class="total-card__per-day"><b>9 990₽</b> в сутки</p>
@@ -156,7 +163,7 @@
           <div class="cards-page__item">
             <div class="auth-card">
               <div class="auth-card__wrap">
-                <form method="get">
+                <form action="/404.html">
                   <h2 class="auth-card__title">Войти</h2>
                   <fieldset>
                     <div class="input-group">
