--- a/colors-and-type.html
+++ b/colors-and-type.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="description" content="Toxin description"/>
     <meta name="keywords" content="Toxin keywords"/>
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
+    <link rel="manifest" href="/site.webmanifest"/>
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
     <title>Toxin - типографика!</title>
   </head>
   <body class="colors-and-type">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo--big-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
     <div class="container">
       <div class="colors-and-type__wrap">
         <ul class="colors-and-type__pallete">
