--- a/form-elements.html
+++ b/form-elements.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="description" content="Toxin description"/>
     <meta name="keywords" content="Toxin keywords"/>
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
+    <link rel="manifest" href="/site.webmanifest"/>
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
     <title>Toxin - элементы форм</title>
   </head>
   <body class="form-elements">
-    <div class="logo logo--big"><img width="48" height="48" src="img/logo--big-fe219fa.png" alt="toxin"/></div>
+    <div class="logo logo--big"><img width="48" height="48" src="img/logo-fe219fa.png" alt="toxin"/></div>
     <div class="container">
       <div class="form-elements__wrap">
         <div class="form-elements__row">
@@ -179,12 +186,12 @@
               <div class="pagination__wrap">
                 <p class="pagination__title">Pagination</p>
                 <ul class="pagination__pages">
-                  <li class="pagination__page-item  pagination__page-item--active"><a href="#">1</a></li>
-                  <li class="pagination__page-item"><a href="#">2</a></li>
-                  <li class="pagination__page-item"><a href="#">3</a></li>
-                  <li class="pagination__page-item"><a href="#">...</a></li>
-                  <li class="pagination__page-item"><a href="#">15</a></li>
-                  <li class="pagination__page-item  pagination__page-next"><a href="#">Далее</a></li>
+                  <li class="pagination__page-item  pagination__page-item--active"><a href="/404.html">1</a></li>
+                  <li class="pagination__page-item"><a href="/404.html">2</a></li>
+                  <li class="pagination__page-item"><a href="/404.html">3</a></li>
+                  <li class="pagination__page-item"><a href="/404.html">...</a></li>
+                  <li class="pagination__page-item"><a href="/404.html">15</a></li>
+                  <li class="pagination__page-item  pagination__page-next"><a href="/404.html">Далее</a></li>
                 </ul>
                 <div class="pagination__overview">
                   <p>1 – 12 из 100+ вариантов аренды</p>
